--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
+        "pda/pheanstalk": "^3.1",
         "predis/predis": "^1.1"
     },
     "require-dev": {
