--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "files": ["app/helpers.php"]
+        "files": ["app/Services/helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
