Testing push notifications...

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-  "/js/app.js": "/js/app.js",
-  "/css/app.css": "/css/app.css"
+  "/js/app.js": "/js/app.48b4154e5dbd00747efc.js",
+  "/css/app.css": "/css/app.44f91adf2702da34c436.css"
 }
